cabal-version: 2.4
name: keep
version: 0
license: BSD-2-Clause
license-file: LICENSE
author: Edward Kmett
maintainer: ekmett@gmail.com
copyright: (c) 2019 Edward Kmett
extra-source-files:
  README.md
  CHANGELOG.md

library
  build-depends:
    base >= 4.12,
    binary,
    bytestring,
    cryptohash-sha256 >= 0.11,
    distributed-closure ^>= 0.4,
    hedis,
    lens,
    mtl,
    transformers,
    utf8-string,
    uuid >= 1.2.6 && < 1.4

  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Control.Keep
