cabal-version: 2.4
name: keep
version: 0
license: BSD-2-Clause
license-file: LICENSE
author: Edward Kmett
maintainer: ekmett@gmail.com
copyright: (c) 2019 Edward Kmett
extra-source-files:
  README.md
  CHANGELOG.md

common common
  default-language: Haskell2010
  build-depends:
    base >= 4.12,
    hedis ^>= 0.12.9,
    bytestring ^>= 0.10,
    utf8-string ^>= 1.0.1.1

library
  import: common
  build-depends:
    binary ^>= 0.8.7,
    cryptohash-sha256 >= 0.11,
    distributed-closure ^>= 0.4,
    hashable >= 1.2 && < 1.4,
    time >= 1.4.1 && < 1.10,
    transformers ^>= 0.5.6.2 ,
    unliftio-core ^>= 0.1.2,
    uuid >= 1.2.6 && < 1.4

  hs-source-dirs: src
  exposed-modules:
    Control.Keep
    Control.Keep.Internal

executable keep
  import: common
  build-depends:
    keep,
    optparse-applicative ^>= 0.15.1
  main-is: Main.hs
